# openfhe-sandbox

./: .gitignore  meson.build
data/: inference.py  mnist.py  scikit.py  trim_data.py
include/: ndarray.h
src/: inference.cpp  openfhe_sandbox.cpp
subprojects/: openfhe.wrap
